Actualización a la guia de actividades y figuras de los videos.

--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -2,6 +2,8 @@
 \input{preamble.tex}
 \usepackage{float}
 \graphicspath{{./figs/}}
+% Renombro lo capitulos
+\addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
 
 \title{{\large Nivel 2} \\ Introducción a la teledetección SAR}
 \author[*]{Tomas Zajc}
