--- a/Nivel2-B/Documentos/Videos/clase1.tex
+++ b/Nivel2-B/Documentos/Videos/clase1.tex
@@ -108,7 +108,9 @@
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Propiedades STRIPMAP}
       \begin{itemize}
-        \item
+        \item El RADAR toma datos de un solo Swadth
+        \item Es el método de adquisición por defecto de la mayoría de los satélites.
+        \item Resolución intermedia.
       \end{itemize}
     \end{block}
 \end{frame}
@@ -126,7 +128,9 @@
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Propiedades SPOTLIGHT}
       \begin{itemize}
-        \item
+        \item El RADAR enfoca la toma de datos en una región específica.
+        \item Alta resolución espacial en la tema de datos.
+        \item Tiene menor cobertura espacial y necesita reorientar la antena para realizar la toma de datos.
       \end{itemize}
     \end{block}
 \end{frame}
@@ -145,12 +149,12 @@
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Propiedades SCANSAR}
       \begin{itemize}
-        \item El RADAR Va distribuyendo pulsos de  a bursts entre varios swaths
-        \item Gran swath
-        \item Baja resolución
-        \item Mala relación señal ruido en algunas partes y buena en otras
-        \item Mala distribución de potencia generando scalloping
-        \item Hace falta reapuntar la antena en elevación entre burst
+        \item El RADAR Va distribuyendo pulsos de a bursts entre varios swaths.
+        \item Gran swath.
+        \item Baja resolución.
+        \item Mala relación señal ruido en algunas partes y buena en otras.
+        \item Mala distribución de potencia generando scalloping.
+        \item Hace falta reapuntar la antena en elevación entre burst.
       \end{itemize}
     \end{block}
 \end{frame}
@@ -168,11 +172,11 @@
 \begin{frame}{\secname : \subsecname}
     \begin{block}{TOPSAR}
       \begin{itemize}
-        \item El RADAR Va distribuyendo pulsos entre varios swaths y variando el apuntamiento en acimut para iluminar la pisada de manera mas homogénea
-        \item Gran swath
-        \item Baja resolución
+        \item El RADAR Va distribuyendo pulsos entre varios swaths y variando el apuntamiento en acimut para iluminar la pisada de manera mas homogénea.
+        \item Gran swath.
+        \item Baja resolución.
         \item Aceptable relación señal ruido y uniforme en la imagen.
-        \item Buena distribución de potencia. No hay scalloping
+        \item Buena distribución de potencia. No hay scalloping.
       \end{itemize}
     \end{block}
 \end{frame}
