--- a/Nivel2-B/Documentos/Videos/clase2.tex
+++ b/Nivel2-B/Documentos/Videos/clase2.tex
@@ -160,7 +160,7 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-  \begin{block}[Observación:]
+  \begin{block}{Observación:}
     A diferencia de los satélites ópticos, la resolución en un sistema SAR no depende de la distancia entre el satélite y el blanco.
   \end{block}
 \end{frame}
