--- a/Nivel2-B/Documentos/Guia/prefacio.tex
+++ b/Nivel2-B/Documentos/Guia/prefacio.tex
@@ -1,3 +1,122 @@
 \chapter{Prefacio}
 
 INTRODUCCION A LA TECNOLOGIA SAR. OBJETIVOS DEL CURSO. ETC.
+
+\chapter{Descripción del curso}
+
+El curso busca brindar conceptos básicos de interpretación visual y procesamiento de imágenes de radar de apertura sintética. Para ello se trabajara en una modalidad teórico-práctica que incluye una introducción teórica al tema, un ejemplo práctico sobre este y una evaluación corta sobre los conceptos aprendidos.
+
+\section*{Carga horaria}
+El curso tiene una carga horaria de 25 horas reloj repartido en 5 clases semanales.
+
+\section*{Requisitos} Haber cursado el curso SoPI I o acreditar conocimientos
+equivalentes de teledetección.
+
+\section*{Aprobación} El curso brindará certificado de \emph{aprobación}. Para obtenerlo el alumno deberá aprobar todos los cuestionarios de evaluación y completar una encuesta de inicio y una encuenta final sobre el curso.
+
+\section*{Bibliografía}
+\textbf {\large Texto:} \emph{Remote Sensing with Imaging Radar},
+5\textsuperscript{th} Edition
+\textbf {Autor:} John A. Richards; \\
+
+\section*{Objetivos del curso}
+Al finalizar el curso, el alumno podrá:
+\begin{enumerate} \itemsep-0.4em
+  \item Interpretar imágenes SAR en las bandas X, L y C.
+  \item Obtener y procesar imágenes SAR de distintas fuentes.
+  \item Comprender que clase de errores pueden aparecer en el procesamiento de imágenes SAR.
+  \item Interpretar imágenes SAR full polarimétricas en la descomposición de Pauli.
+  \item Conocer distinas áreas de aplicación de las imágenes SAR.
+\end{enumerate}
+
+\section*{Programa}
+% Fecha de inicio del curso
+\SetDate[26/03/2018]
+\begin{longtable}[h!]{ c  c  }
+%\normalsize % The size of the table text can be changed depending on content. Remove if desired.
+%\begin{tabular}{ | c | c | }
+\toprule
+\textbf{Día} & \textbf{Contenido} \\
+\midrule
+\mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Actividad: Encuesta de inicio del curso. Descara de materiales y software.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+  \item Teoría: Espectro electromagnético. Operación de un radar. Formación de imágenes SAR. Geometría de adquisición. Modos de adquisición. Comparación con imágenes ópticas.
+  \item Práctica: Familiarización con la interface gráfica del SNAP.
+	\item Actividad: Cuestionario 1 de la plataforma de eduación a distancia.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Teoría: Interpretación visual de imágenes SAR. Textura y geometría de coberturas típicas. Coeficiente de retrodispersión. Bandas L, C y X. Formás de interacción con el blanco: doble rebote, en volumen y especular. Resolución espacial.
+  \item Práctica: Interpretación visual de imágenes SAR en bandas L, C y X. Obtención de coeficientes de retrodispersión.
+	\item Actividad: Cuestionario 2 de la plataforma de eduación a distancia.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Teoría: Calibración de imágenes SAR. Ruido speckle y multilooking. Distorciones geométricas. Proyección en rango y en el terreno. Niveles de procesamiento de imágenes SAR.
+  \item Práctica: Descarga y procesamiento de imágenes SAR del catálogo del Alaska Satellite Facility.
+	\item Actividad: Cuestionario 3 de la plataforma de eduación a distancia.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+
+
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Teoría: Ondas electromagnéticas y polarización. Imágenes full polarimetricas. Matriz de scatter y backscatter. Descomposiciónes polarimétricas. Descomposición de Pauli.
+  \item Práctica: Cálculo e interpretación de la descomposición de Pauli.
+	\item Actividad: Cuestionario 4 de la plataforma de eduación a distancia.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Teoría: Misiones SAR. Datos históricos y actuales. Aplicaciones de los datos SAR. Plan espacial nacional. Misión SAOCOM.
+	\item Práctica: Uso de imágenes SAR en distintas aplicaciones.
+	\item Actividad: Cuestionario 5 de la plataforma de eduación a distancia.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+
+\midrule
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Actividad: Encuesta de satisfacción del curso. Descarga de certificados de aprobación
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+\midrule
+\AdvanceDate[21] \mydate\today & \begin{minipage}{.65\textwidth}
+\begin{itemize}
+    \vspace{1mm}
+	\item Actividad: Fin del curso. Última fecha para completar las actividades y descargar el certificado de aprobación.
+    \vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+
+\bottomrule
+\end{longtable}
+%\end{tabular}
