Correcciones menores y separamos las clases en distintos archivos.

--- a/Nivel2-B/Documentos/Guia/apendice2.tex
+++ b/Nivel2-B/Documentos/Guia/apendice2.tex
@@ -51,7 +51,7 @@ Es posible cálcular la estadística sobre una región. Para ello una vez abiert
      \label{fig:bm}
  \end{figure}
 
- En \emph{Band math expression:} puede escribir una expresión matemática utilizando el nombre de las bandas y distintos operadores (Table \ref{tab:oper}).
+ En \emph{Band math expression:} puede escribir una expresión matemática utilizando el nombre de las bandas y distintos operadores .
 
  Es posible cambiar el nombre de la banda creada en la opción \emph{Name:} e incluir una descripción o unidades.
 
