--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -122,3 +122,5 @@ Abra la banda \texttt{Sigma0\_HH\_db}.
 \begin{que}
     ¿Cuales son las coordenadas aproximadas del aeropuerto que se encuentra en el centro de la imagen?
 \end{que}
+
+Estas preguntas no serán evaluadas. Su objetivo es servir de disparador en el foros de discusión.
