--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -120,3 +120,5 @@ Comparando las tres imágenes SAR utilizadas responda:
 \begin{que}
   ¿A que tipo de interacción corresponde cada uno de los blancos estudiados durante esta clase? ¿Depende de la imagen utilizada?
 \end{que}
+
+Estas preguntas no serán evaluadas. Su objetivo es servir de disparador en el foros de discusión.
