--- a/Nivel2-B/Documentos/Guia/guia3.tex
+++ b/Nivel2-B/Documentos/Guia/guia3.tex
@@ -140,3 +140,5 @@ Convierta a dB la banda \texttt{sigma\_0\_HH} y explore visualmente el resultado
 \begin{que}
     ¿Qué sucede con la imagen luego de la proyección?
 \end{que}
+
+Estas preguntas no serán evaluadas. Su objetivo es servir de disparador en el foros de discusión.
