--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -96,3 +96,5 @@ Observe los resultados haciendo click derecho sobre la imagen obtenida en la opc
         \item El agua del canal de Beagle.
     \end{enumerate}
 \end{que}
+
+Estas preguntas no serán evaluadas. Su objetivo es servir de disparador en el foros de discusión.
