--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -1,5 +1,7 @@
-\chapter{Introducción a aplicaciones}
+\chapter{Misión SAOCOM y aplicaciones}
 Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso en distintas aplicaciones utilizando imágenes de distintos satélites.
+
+Deberá entregar el mapa obtenido de una de las aplicaciones en la actividad 5.
 
 \section{Detección de espejos de agua}
 
@@ -53,7 +55,7 @@ En esta aplicación se verá como detectar espejos de agua, utilizando imágenes
 \end{que}
 
 \begin{que}
-    Exporte el mapa como KMZ (Apéndice \ref{ap:GE}).
+    Exporte el mapa como jpg.
 \end{que}
 
 
@@ -112,7 +114,7 @@ En esta aplicación se verá como detectar derramos de petroleo, utilizando imá
 \end{que}
 
 \begin{que}
-    Exporte el mapa como KMZ (Apéndice \ref{ap:GE}).
+    Exporte el mapa como jpg.
 \end{que}
 
 
@@ -178,7 +180,7 @@ En esta aplicación se verá como detectar zonas deforestadas, utilizando imáge
 \end{que}
 
 \begin{que}
-    Exporte el mapa como KMZ (Apéndice \ref{ap:GE}).
+    Exporte el mapa como jpg.
 \end{que}
 
 
@@ -229,7 +231,7 @@ En esta aplicación se verá como detectar áreas urbanas, utilizando imágenes 
 \end{que}
 
 \begin{que}
-    Exporte el mapa como KMZ (Apéndice \ref{ap:GE}).
+    Exporte el mapa como jpg.
 \end{que}
 
 \section{Incendios}
@@ -244,6 +246,7 @@ En esta aplicación se verá como detectar áreas afectadas por incendios, utili
 % W = -63.391
 % S = -39.566
 % E = -64.662
+\subsection{Actividades}
 
 \begin{que}
     Descargue las imagenes de diciembre de 2016 y enero de 2017
@@ -283,5 +286,5 @@ En esta aplicación se verá como detectar áreas afectadas por incendios, utili
 \end{que}
 
 \begin{que}
-    Exporte el mapa como KMZ (Apéndice \ref{ap:GE}).
+    Exporte el mapa como jpg.
 \end{que}
