--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -1,37 +1,40 @@
 \documentclass[a4paper,12pt]{book}
 \input{preamble.tex}
 \usepackage{float}
+\includeonly{guia4}
 \graphicspath{{./figs/}}
 % Renombro lo capitulos
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
 
 \title{{\large Nivel 2} \\ Introducción a la teledetección SAR}
-\author[*]{Tomas Zajc}
+\author[*]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
 
-\author[**]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
-\author[**]{Laura Rouco}
+\author[**]{Tomas Zajc}
 
-\affil[*]{SAOCOM \\ Comisión Nacional de Actividades Espaciales}
-\affil[**]{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
+%\author[**]{Laura Rouco}
 
+\affil[*]{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
+\affil[**]{Misión SAOCOM \\ Comisión Nacional de Actividades Espaciales}
+
+\date{}
 \begin{document}
-\frontmatter
+%\frontmatter
 \maketitle
-\titlepage
-\tableofcontents
-\input{prefacio.tex}
+%\titlepage
+%\tableofcontents
+%\include{prefacio}
 
-\mainmatter
-\input{guia1.tex}
-\input{guia2.tex}
-\input{guia3.tex}
-\input{guia4.tex}
-\input{guia5.tex}
+%\mainmatter
+\include{guia1}
+\include{guia2}
+\include{guia3}
+\include{guia4}
+\include{guia5}
 
 \appendix
-\input{apendice1.tex}
-\input{apendice2.tex}
+\include{apendice1}
+\include{apendice2}
 
-\backmatter
+%\backmatter
 
 \end{document}
