Actualizamos y separamos las presentaciones.

--- a/Nivel2-B/Documentos/Videos/clase1.tex
+++ b/Nivel2-B/Documentos/Videos/clase1.tex
@@ -10,7 +10,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{¿Qué es un radar?}
+\subsection{Funcionamiento de un radar}
 \begin{frame}{\secname : \subsecname}
     \begin{figure}
       \centering
@@ -21,7 +21,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{¿Cómo detecta un radar?}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -32,7 +31,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Geometría}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -43,7 +41,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Generación de una imagen}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -65,7 +62,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Comparación con el óptico}
 \begin{frame}{\secname : \subsecname}
 \begin{columns}
   \begin{column}{0.5\textwidth}
