--- a/Nivel2-B/Documentos/Videos/clase2.tex
+++ b/Nivel2-B/Documentos/Videos/clase2.tex
@@ -127,6 +127,7 @@
     \end{figure}
 \end{frame}
 %--- Next Frame ---%
+\subsection{Resolución espacial}
 
 \begin{frame}{\secname : \subsecname}
     A diferencia de la mayoría de los sistemas ópticos, los sistemas de radar tienen dos resoluciones:
