--- a/Nivel2-B/Documentos/Videos/clase5.tex
+++ b/Nivel2-B/Documentos/Videos/clase5.tex
@@ -1,5 +1,5 @@
-\section{Introducción a aplicaciones}
-\subsection{Misiones SAR}
+\section{Misión SAOCOM y aplicaciones}
+\subsection{Misiones SAOCOM}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -10,7 +10,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Plan Espacial Nacional y Serie SAOCOM}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -20,7 +19,6 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
-\subsection{Serie SAOCOM}
 
 \begin{frame}{\secname : \subsecname}
   \begin{columns}
@@ -57,8 +55,6 @@
 \end{frame}
 %--- Next Frame ---%
 
-
-\subsection{Segmento de vuelvo}
 \begin{frame}{\secname : \subsecname}
 \begin{itemize}
   \item Órbita polar, heliosincrónica (inclinación 97.89) a 620 km de altura
@@ -71,3 +67,5 @@
 \end{itemize}
 \end{frame}
 %--- Next Frame ---%
+
+\subsection{Aplicaciones SAR}
